Implement atm jwt validation